# welch-sde

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .# markdown-code-fontification:rustic-mode  spectral_density.rs  split_signal.rs  white_noise.rs
src/: builder.rs  lib.rs  periodogram.rs  power_spectrum.rs  spectral_density.rs  welch.rs  window.rs
