[package]
name = "welch-sde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.0"
num-traits = "0.2.14"
rustfft = "6.0.1"

[dev-dependencies]
complot = "0.3.2"
rand = "0.8.4"
rand_distr = "0.4.2"
