[package]
name = "welch-sde"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Spectral density and power spectrum estimation with Welch method"
repository = "https://github.com/rconan/welch-sde"
documentation = "https://docs.rs/welch-sde"
readme = "README.md"
categories = ["science", "simulation"]

[dependencies]
num-complex = "0.4.0"
num-traits = "0.2.14"
rustfft = "6.0.1"

[dev-dependencies]
complot = "0.3.2"
rand = "0.8.4"
rand_distr = "0.4.2"
